.metals/.reports/metals/2023-09-14/r_scala-toplevel-mtags_01-05-45-542
id: file://<WORKSPACE>/Signup.scala:[360..361) in Input.VirtualFile("file://<WORKSPACE>/Signup.scala", "class Signup {
    private var id: Int = 0
    private var first_name: String = " "
    private var last_name: String = " "
    private var email: String = " "
    private var username: String = " "
    private var phone_number: String = " "
    private var gender: String = " "
    private var pass: String = " "
    private var pass2: String = " "

    def 
}
    

    object User {
        def createUser(
            id: Int, first_name: String, last_name: String, email: String,
            username: String, phone_number: String, gender: String, pass: String, pass2: String
        ): Signup = new Signup()
    }


    // val user = User.createUser("John Doe", "jd@yahoo.com")

    // Getters and setters 
    

")
file://<WORKSPACE>/Signup.scala:13: error: expected identifier; obtained rbrace
}
^